--- a/views/partials/newPokemon.handlebars
+++ b/views/partials/newPokemon.handlebars
@@ -81,11 +81,10 @@
                 <h5>PV: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range iv-range hp-updater" min="0" max="31" value="31" id="rangeIVhp">
+                <input type="range" class="form-range iv-range hp-updater set-zero" min="0" max="31" value="31" id="rangeIVhp">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control iv-control hp-updater" min="0" max="31" value="31"
-                    id="inputIVhp">
+                <input type="number" class="form-control iv-control hp-updater set-zero" min="0" max="31" value="31" id="inputIVhp">
             </div>
         </div>
         <div class="row">
@@ -93,10 +92,10 @@
                 <h5>Ataque: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range iv-range atk-updater" min="0" max="31" value="31" id="rangeIVatk">
+                <input type="range" class="form-range iv-range atk-updater set-zero" min="0" max="31" value="31" id="rangeIVatk">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control iv-control atk-updater" min="0" max="31" value="31"
+                <input type="number" class="form-control iv-control atk-updater set-zero" min="0" max="31" value="31"
                     id="inputIVatk">
             </div>
         </div>
@@ -105,10 +104,10 @@
                 <h5>Defensa: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range iv-range def-updater" min="0" max="31" value="31" id="rangeIVdef">
+                <input type="range" class="form-range iv-range def-updater set-zero" min="0" max="31" value="31" id="rangeIVdef">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control iv-control def-updater" min="0" max="31" value="31"
+                <input type="number" class="form-control iv-control def-updater set-zero" min="0" max="31" value="31"
                     id="inputIVdef">
             </div>
         </div>
@@ -117,10 +116,10 @@
                 <h5>Ataque Especial: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range iv-range spa-updater" min="0" max="31" value="31" id="rangeIVspa">
+                <input type="range" class="form-range iv-range spa-updater set-zero" min="0" max="31" value="31" id="rangeIVspa">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control iv-control spa-updater" min="0" max="31" value="31"
+                <input type="number" class="form-control iv-control spa-updater set-zero" min="0" max="31" value="31"
                     id="inputIVspa">
             </div>
         </div>
@@ -129,10 +128,10 @@
                 <h5>Defensa Especial: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range iv-range spd-updater" min="0" max="31" value="31" id="rangeIVspd">
+                <input type="range" class="form-range iv-range spd-updater set-zero" min="0" max="31" value="31" id="rangeIVspd">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control iv-control spd-updater" min="0" max="31" value="31"
+                <input type="number" class="form-control iv-control spd-updater set-zero" min="0" max="31" value="31"
                     id="inputIVspd">
             </div>
         </div>
@@ -141,10 +140,10 @@
                 <h5>Velocidad: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range iv-range spe-updater" min="0" max="31" value="31" id="rangeIVspe">
+                <input type="range" class="form-range iv-range spe-updater set-zero" min="0" max="31" value="31" id="rangeIVspe">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control iv-control spe-updater" min="0" max="31" value="31"
+                <input type="number" class="form-control iv-control spe-updater set-zero" min="0" max="31" value="31"
                     id="inputIVspe">
             </div>
         </div>
@@ -156,10 +155,10 @@
                 <h5>PV: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range ev-range hp-updater" min="0" max="255" value="0" id="rangeEVhp">
+                <input type="range" class="form-range ev-range hp-updater set-zero" min="0" max="255" value="0" id="rangeEVhp">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control ev-control hp-updater" min="0" max="255" value="0"
+                <input type="number" class="form-control ev-control hp-updater set-zero" min="0" max="255" value="0"
                     id="inputEVhp">
             </div>
         </div>
@@ -168,11 +167,10 @@
                 <h5>Ataque: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range ev-range atk-updater" min="0" max="255" value="0" id="rangeEVatk">
+                <input type="range" class="form-range ev-range atk-updater set-zero" min="0" max="255" value="0" id="rangeEVatk">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control ev-control atk-updater" min="0" max="255" value="0"
-                    id="inputEVatk">
+                <input type="number" class="form-control ev-control atk-updater set-zero" min="0" max="255" value="0" id="inputEVatk">
             </div>
         </div>
         <div class="row">
@@ -180,10 +178,10 @@
                 <h5>Defensa: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range ev-range def-updater" min="0" max="255" value="0" id="rangeEVdef">
+                <input type="range" class="form-range ev-range def-updater set-zero" min="0" max="255" value="0" id="rangeEVdef">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control ev-control def-updater" min="0" max="255" value="0"
+                <input type="number" class="form-control ev-control def-updater set-zero" min="0" max="255" value="0"
                     id="inputEVdef">
             </div>
         </div>
@@ -192,10 +190,10 @@
                 <h5>Ataque Especial: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range ev-range spa-updater" min="0" max="255" value="0" id="rangeEVspa">
+                <input type="range" class="form-range ev-range spa-updater set-zero" min="0" max="255" value="0" id="rangeEVspa">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control ev-control spa-updater" min="0" max="255" value="0"
+                <input type="number" class="form-control ev-control spa-updater set-zero" min="0" max="255" value="0"
                     id="inputEVspa">
             </div>
         </div>
@@ -204,10 +202,10 @@
                 <h5>Defensa Especial: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range ev-range spd-updater" min="0" max="255" value="0" id="rangeEVspd">
+                <input type="range" class="form-range ev-range spd-updater set-zero" min="0" max="255" value="0" id="rangeEVspd">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control ev-control spd-updater" min="0" max="255" value="0"
+                <input type="number" class="form-control ev-control spd-updater set-zero" min="0" max="255" value="0"
                     id="inputEVspd">
             </div>
         </div>
@@ -216,10 +214,10 @@
                 <h5>Velocidad: </h5>
             </div>
             <div class="col-sm-4">
-                <input type="range" class="form-range ev-range spe-updater" min="0" max="255" value="0" id="rangeEVspe">
+                <input type="range" class="form-range ev-range spe-updater set-zero" min="0" max="255" value="0" id="rangeEVspe">
             </div>
             <div class="col-sm-2">
-                <input type="number" class="form-control ev-control spe-updater" min="0" max="255" value="0"
+                <input type="number" class="form-control ev-control spe-updater set-zero" min="0" max="255" value="0"
                     id="inputEVspe">
             </div>
         </div>
