--- a/views/partials/teamsContainer.handlebars
+++ b/views/partials/teamsContainer.handlebars
@@ -7,7 +7,7 @@
         <div class="mb-5" data-id="{{this.ID_Team}}">
             <div class="row text-center">
                 <div class="col-sm-12 col-lg-3">
-                    <h4>{{this.team_name}}</h4>
+                    <h4 class="text-start">{{this.team_name}}</h4>
                 </div>
                 <div class="col-sm-12 col-lg-3">
                     <button class="btn btn-primary btn-sm" onclick="showPokemonCreator(this)">Añadir Pokémon</button>
