--- a/views/lobby.handlebars
+++ b/views/lobby.handlebars
@@ -4,6 +4,7 @@
         <div class="my-3 form-group">
             <h2>Lobby de batallas</h2>
         </div>
+        {{> errorAlert}}
         <div class="mb-3 form-group">
             <label for="selectTeamID" class="form-label">Elegir equipo</label>
             <select id="selectTeamID" class="form-select" onchange="selectBattleTeam()">
