--- a/views/modifyUserData.handlebars
+++ b/views/modifyUserData.handlebars
@@ -28,7 +28,7 @@
         <label for="modifyUserDataFavoritePokemon" class="form-label">Pokémon favorito</label>
         <select id="modifyUserDataFavoritePokemon" name="pokemon_favorito" class="form-select">
             <option value="" disabled selected>Seleccione un Pokémon...</option>
-            {{#each pokemonList}}
+            {{#each pokemonNamesList}}
             <option>{{this}}</option>
             {{/each}}
         </select>
