--- a/views/partials/newPokemon.handlebars
+++ b/views/partials/newPokemon.handlebars
@@ -5,7 +5,7 @@
     <div class="mb-3 form-group text-center">
         <select id="pokemon-selector" class="form-select mb-3" onchange="enableButton('searchPokemonDataButton')">
             <option disabled selected>Seleccione un Pokémon</option>
-            {{#each pokemonList}}
+            {{#each pokemonNamesList}}
             <option>{{this}}</option>
             {{/each}}
         </select>
