Funcionan las credenciales y estamos en campaña para que podamos atacar en combate

--- a/views/battle.handlebars
+++ b/views/battle.handlebars
@@ -15,10 +15,11 @@
                 <h6>Pokémon restantes: <b id="user1pokemonLeft">{{pokemonLeft}}</b></h6>
             </div>
             <div class="form-group mb-5">
-                <button id="timeButton" class="btn btn-primary" disabled>Activar temporizador</button>
+                <button id="timeButton" class="btn btn-primary" onclick="beginTimeout()" disabled>Activar temporizador</button>
             </div>
             <div class="form-group mb-3">
-                <button id="surrenderButton" class="btn btn-danger" onclick="surrenderButton(this)" disabled>Rendirse</button>
+                <button id="surrenderButton" class="btn btn-danger" onclick="surrenderFromBattle()"
+                    disabled>Rendirse</button>
             </div>
         </div>
         <div id="beforeOpponentHasConnected" class="mt-5 bg-light mb-3 px-3 py-5 border col-sm-6 text-center">
@@ -46,37 +47,33 @@
                 <img id="pokemon1Image">
             </div>
             <div class="form-group mb-3">
+                <h5 id="pokemon1Types">Tipos: </h5>
+                <h5 id="pokemon1Ability">Habilidad: </h5>
+                <h5 id="pokemon1Item">Objeto: </h5>
+                <h5 id="pokemon1Status">Estado: </h5>
+            </div>
+            <div class="form-group mb-3">
                 <h5 id="pokemon1HP">PV: </h5>
-            </div>
-            <div class="form-group mb-3">
                 <h5 id="pokemon1Atk">Ataque: </h5>
-            </div>
-            <div class="form-group mb-3">
                 <h5 id="pokemon1Def">Defensa: </h5>
-            </div>
-            <div class="form-group mb-3">
                 <h5 id="pokemon1Spa">Ataque Especial: </h5>
-            </div>
-            <div class="form-group mb-3">
                 <h5 id="pokemon1Spd">Defensa Especial: </h5>
-            </div>
-            <div class="form-group mb-5">
                 <h5 id="pokemon1Spe">Velocidad: </h5>
             </div>
             <div class="row">
                 <div class="form-group col-sm-6 mb-3">
-                    <button id="move1" class="btn btn-secondary">Movimiento 1</button>
+                    <button id="move1" class="btn btn-secondary btn-move" onclick="selectTurnAction(0)">Movimiento 1</button>
                 </div>
                 <div class="form-group col-sm-6 mb-3">
-                    <button id="move2" class="btn btn-secondary">Movimiento 2</button>
+                    <button id="move2" class="btn btn-secondary btn-move" onclick="selectTurnAction(1)">Movimiento 2</button>
                 </div>
             </div>
             <div class="row">
                 <div class="form-group col-sm-6 mb-3">
-                    <button id="move3" class="btn btn-secondary">Movimiento 3</button>
+                    <button id="move3" class="btn btn-secondary btn-move" onclick="selectTurnAction(2)">Movimiento 3</button>
                 </div>
                 <div class="form-group col-sm-6 mb-3">
-                    <button id="move4" class="btn btn-secondary">Movimiento 4</button>
+                    <button id="move4" class="btn btn-secondary btn-move" onclick="selectTurnAction(3)">Movimiento 4</button>
                 </div>
             </div>
         </div>
@@ -95,6 +92,8 @@
                 <img id="pokemon2Image">
             </div>
             <div class="form-group mb-3">
+                <h5 id="pokemon2Types">Tipos: </h5>
+                <h5 id="pokemon2Status">Estado: OK</h5>
                 <h5 id="pokemon2HP">PV: </h5>
             </div>
         </div>
