--- a/views/partials/teamsContainer.handlebars
+++ b/views/partials/teamsContainer.handlebars
@@ -4,7 +4,8 @@
     </div>
     <div id="teamsContainer" class="my-3 form-group container">
         {{#each teams}}
-        <div class="mb-5" data-id="{{this.ID_Team}}">
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{@index}}" aria-expanded="false" aria-controls="collapse{{@index}}">{{this.team_name}}</button>
+        <div class="my-5 collapse" id="collapse{{@index}}" data-id="{{this.ID_Team}}">
             <div class="row text-center">
                 <div class="col-sm-12 col-lg-3">
                     <h4 class="text-start">{{this.team_name}}</h4>
