--- a/views/battle.handlebars
+++ b/views/battle.handlebars
@@ -56,6 +56,7 @@
                 <img id="pokemon1Image">
             </div>
             <div class="form-group mb-3">
+                <h5 id="pokemon1Level">Nivel:</h5>
                 <h5 id="pokemon1Types">Tipos: </h5>
                 <h5 id="pokemon1Ability">Habilidad: </h5>
                 <h5 id="pokemon1Item">Objeto: </h5>
@@ -105,6 +106,7 @@
                 <img id="pokemon2Image">
             </div>
             <div class="form-group mb-3">
+                <h5 id="pokemon2Level">Nivel:</h5>
                 <h5 id="pokemon2Types">Tipos: </h5>
                 <h5 id="pokemon2Status">Estado: OK</h5>
                 <h5 id="pokemon2HP">PV: </h5>
