--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -16,13 +16,11 @@
             <input type="password" class="form-control" id="createAccountPasswordID" placeholder="Contraseña">
         </div>
         <div class="mb-3 form-check">
-            <button type="button" class="btn btn-primary" onclick="createAccount()">Crear Cuenta</button>
+            <button type="button" id="createAccountButton" class="btn btn-primary" onclick="createAccount()">Crear Cuenta</button>
         </div>
     </div>
 </div>
 
-<form id="returnLoginForm" action="/" method="GET" class="container-sm"></form>
-
 <div class="text-center mb-3">
-    <a id="returnCreateAccountLink" href="/" class="btn btn-primary btn-lg">Volver</a>
+    <a id="returnLoginLink" href="/" class="btn btn-primary btn-lg">Volver</a>
 </div>
