--- a/views/modifyPassword.handlebars
+++ b/views/modifyPassword.handlebars
@@ -19,10 +19,10 @@
         <input type="password" class="form-control" id="newPasswordVerification">
     </div>
     <div class="mb-3 form-check">
-        <button type="button" class="btn btn-primary btn-lg" onclick="modifyPassword()">Cambiar contraseña</button>
+        <button type="button" id="modifyPasswordButton" class="btn btn-primary btn-lg" onclick="modifyPassword()">Cambiar contraseña</button>
     </div>
 </div>
 
-<form id="returnHomeForm" action="/home" method="GET" class="text-center mb-3">
-    <button type="submit" class="btn btn-primary btn-lg">Volver</button>
-</form>
+<div class="text-center mb-3">
+    <a id="returnHomeLink" href="/home" class="btn btn-primary btn-lg">Volver</a>
+</div>
