--- a/views/modifyUserData.handlebars
+++ b/views/modifyUserData.handlebars
@@ -34,10 +34,10 @@
         </select>
     </div>
     <div class="mb-3 form-check">
-        <button type="button" class="btn btn-primary btn-lg" onclick="modifyUserData()">Modificar</button>
+        <button type="button" id="modifyUserDataButton" class="btn btn-primary btn-lg" onclick="modifyUserData()">Modificar</button>
     </div>
 </div>
 
-<form id="returnHomeForm" action="/home" method="GET" class="text-center mb-3">
-    <button type="submit" class="btn btn-primary btn-lg">Volver</button>
-</form>
+<div class="text-center mb-3">
+    <a id="returnHomeLink" href="/home" class="btn btn-primary btn-lg">Volver</a>
+</div>
