--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,8 @@
 	<script src="https://cdn.socket.io/4.4.0/socket.io.min.js"
 		integrity="sha384-1fOn6VtTq3PWwfsOrk45LnYcGosJwzMHv+Xh/Jx5303FVOXzEnw0EpLv30mtjmlj"
 		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script src="/js/axios.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<link rel="icon" href="../img/icon.png">
 </head>
